<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="Создание пациента"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btnBackToPatientDetails"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBackToPatientDetails"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#5CBDD3"
        android:text="@string/btn_back"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="#2E5CBDD3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSaveNewCardPatient"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintVertical_weight="4"
        android:weightSum="6">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.202">

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:text="@string/field_name"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/EnterName"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/field_name_hint"
                android:inputType="textCapSentences" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06">

            <TextView
                android:id="@+id/SecondName"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginLeft="5dp"
                android:text="@string/field_lastname"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/EnterSecondName"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="@string/field_lastname_hint"
                android:inputType="textCapSentences" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.353">

            <TextView
                android:id="@+id/Surname"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginLeft="5dp"
                android:text="@string/field_middlename"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/EnterSurname"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:ems="10"
                android:background="@drawable/edittext_bg"
                android:hint="@string/field_middlename_hint"
                android:inputType="textCapSentences" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/field_birthdate2" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:clickable="true"
                android:hint="Введите дату"
                android:ems="10"
                android:background="@drawable/edittext_bg"
                android:focusable="false"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.123"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.696">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/additional_info_title" />

            <EditText
                android:id="@+id/editTextTextMultiLine2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="start|top"
                android:background="@drawable/edittext_bg"
                android:hint="@string/additional_info_hint"
                android:inputType="textMultiLine" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveNewCardPatient"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="#4CAF50"
        android:layout_marginBottom="5dp"
        android:text="@string/btn_save"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>