<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EditFromGallery"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFromGallery">


    <LinearLayout
        android:id="@+id/LL2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/photoView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/fotoSelect"
            android:textColor="#040404"
            android:textSize="16sp"

            android:maxLines="10"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="60dp"

            android:fontFamily="sans-serif-black"
            />

        <Button
            android:id="@+id/btnBackToPatientDetails"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"

            android:layout_marginEnd="10dp"

            android:backgroundTint="#5CBDD3"
            android:text="@string/btn_back"
            android:textColor="@color/white"
            android:textSize="18sp"

            android:maxLines="2"
            android:gravity="center"
            />




    </LinearLayout>

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/photoView"
        android:layout_width="0dp"
        android:background="#A2A0A0"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/LL2"
        app:layout_constraintBottom_toTopOf="@+id/LL1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LL1"
        android:layout_width="0dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoView">


        <!-- Выпадающий список фильтров по центру -->
        <Spinner
            android:id="@+id/filterSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/checkBox"
            app:layout_constraintStart_toEndOf="@+id/buttonGallery"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <!-- Кнопка галереи слева -->
        <ImageButton
            android:id="@+id/buttonGallery"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@null"
            android:backgroundTint="@color/white"
            android:src="@drawable/gallery_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" />
        <TextView
            android:id="@+id/textCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Галерея"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/buttonGallery"
            app:layout_constraintStart_toStartOf="@+id/buttonGallery"
            app:layout_constraintEnd_toEndOf="@+id/buttonGallery"
            android:layout_marginTop="4dp" />

        <!-- Галочка справа -->
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filterCheck"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>